[tool.poetry]
name = "mtkgpkg2svg"
version = "0.1.0"
description = ""
authors = ["Juho Kilpikoski <juho@teelisyys.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
wkbparse = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
types-tqdm = "^4.66.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
